--- a/index.html
+++ b/index.html
@@ -7,8 +7,19 @@
     <link rel="stylesheet" href="index.css" />
 </head>
 <body>
-    <a href="components/全屏背景图模板一/bgfull_1.html">全屏背景图模板一</a>
-    <a href="components/JavaScript/createObject/createObject.html">JavaScript创建对象的多种方式</a>
-    <a href="components/JavaScript/constructor/constructor.html">constructor</a>
+	<div class="container">
+		<div class="form-group">
+	    	<a href="components/全屏背景图模板一/bgfull_1.html">全屏背景图模板一</a>
+		</div>	
+		<div class="form-group">
+	    	<a href="components/JavaScript/createObject/createObject.html">JavaScript创建对象的多种方式</a>
+		</div>	
+		<div class="form-group">
+	    	<a href="components/JavaScript/constructor/constructor.html">constructor</a>
+		</div>
+		<div class="form-group">
+			<a href="components/css3动画/button.html">css3动画</a>
+		</div>
+	</div>
 </body>
 </html>
