--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 		<div class="form-group">
 			<a href="components/css3动画/button.html">css3动画</a>
 		</div>
+		<div class="form-group">
+			<a href="components/纯css气泡/bubble.html">css气泡</a>
+		</div>
 	</div>
 </body>
 </html>
