--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 		<div class="form-group">
 			<a href="components/纯css气泡/bubble.html">css气泡</a>
 		</div>
+		<div class="form-group">
+			<a href="components/美化复选框单选框/beautifyForm.html">美化复选框单选框</a>
+		</div>
 	</div>
 </body>
 </html>
