--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 		<div class="form-group">
 			<a href="components/美化复选框单选框/beautifyForm.html">美化复选框单选框</a>
 		</div>
+		<div class="form-group">
+			<a href="components/ng复选框处理/checkbox.html">ng复选框处理</a>
+		</div>
 	</div>
 </body>
 </html>
