--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 		<div class="form-group">
 			<a href="components/ng复选框处理/checkbox.html">ng复选框处理</a>
 		</div>
+		<div class="form-group">
+			<a href="components/ng表单处理/ngform.html">ng表单处理</a>
+		</div>
 	</div>
 </body>
 </html>
