--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 		<div class="form-group">
 			<a href="components/ng表单处理/ngform.html">ng表单处理</a>
 		</div>
+		<div class="form-group">
+			<a href="components/ng实例/index.html">ng实例</a>
+		</div>
 	</div>
 </body>
 </html>
