--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	<div class="container">
 		<div class="form-group">
 	    	<a href="components/全屏背景图模板一/bgfull_1.html">全屏背景图模板一</a>
-		</div>	
+		</div>
 		<div class="form-group">
 	    	<a href="components/JavaScript/createObject/createObject.html">JavaScript创建对象的多种方式</a>
-		</div>	
+		</div>
 		<div class="form-group">
 	    	<a href="components/JavaScript/constructor/constructor.html">constructor</a>
 		</div>
@@ -34,6 +34,9 @@
 		</div>
 		<div class="form-group">
 			<a href="components/ng实例/index.html">ng实例</a>
+		</div>
+		<div class="form-group">
+			<a href="components/vue入门/index.html">vue入门</a>
 		</div>
 	</div>
 </body>
