--- a/index.html
+++ b/index.html
@@ -33,10 +33,16 @@
 			<a href="components/ng表单处理/ngform.html">ng表单处理</a>
 		</div>
 		<div class="form-group">
+			<a href="components/ng动态下拉框/select.html">ng动态下拉框</a>
+		</div>
+		<div class="form-group">
 			<a href="components/ng实例/index.html">ng实例</a>
 		</div>
 		<div class="form-group">
 			<a href="components/vue入门/index.html">vue入门</a>
+		</div>
+		<div class="form-group">
+			<a href="components/ES6/index.html">ES6</a>
 		</div>
 	</div>
 </body>
