--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 			<a href="components/美化复选框单选框/beautifyForm.html">美化复选框单选框</a>
 		</div>
 		<div class="form-group">
+			<a href="components/下拉框样式/select.html">下拉框样式</a>
+		</div>
+		<div class="form-group">
 			<a href="components/ng复选框处理/checkbox.html">ng复选框处理</a>
 		</div>
 		<div class="form-group">
@@ -34,6 +37,9 @@
 		</div>
 		<div class="form-group">
 			<a href="components/ng动态下拉框/select.html">ng动态下拉框</a>
+		</div>
+		<div class="form-group">
+			<a href="components/ng的watch/watch.html">ng的watch</a>
 		</div>
 		<div class="form-group">
 			<a href="components/ng实例/index.html">ng实例</a>
