--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 		<div class="form-group">
 			<a href="components/ES6/index.html">ES6</a>
 		</div>
+		<div class="form-group">
+			<a href="components/webpack/public/index.html">webpack</a>
+		</div>
 	</div>
 </body>
 </html>
