--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>雨神 - 个人首页</title>
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="index.css" />
